opam-version: "1.2"
name:         "uuuu"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/uuuu"
bug-reports:  "https://github.com/dinosaure/uuuu/issues"
dev-repo:     "https://github.com/dinosaure/uuuu.git"
doc:          "https://dinosaure.github.io/uuuu/"
license:      "MIT"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "fmt"
  "bos"
  "uutf"
  "ptmap"
  "menhir"
  "rresult"
  "angstrom"
  "cmdliner"
]

available: [ocaml-version >= "4.03.0"]
